--- a/css/github-practice.css
+++ b/css/github-practice.css
@@ -14,21 +14,12 @@ a {
     text-decoration: none;
 }
 
-body {
-    font-family: Arial, sans-serif;
-}
-
 .wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100hv;
 }
 
-main {
-    display:flex;
-    flex-direction:column;
-    flex-grow:1;
-}
 
 .container {
     display:flex;
@@ -58,7 +49,7 @@ main {
     flex-grow:1;
 }
 
-.header .column {
+.header.column {
     justify-content:center;
 }
 
@@ -92,26 +83,27 @@ main {
     margin: 10px;
 }
 
-.container.page-header .row {
+.container.page-header.row {
     justify-content:center;
     column-gap: 10px;
 }
 
-.container.page-header .column {
+.container.page-header.column {
     justify-content:center;
 }
 
-.container.page-tabs-menu {
+.container.tabs-menu {
     background-color:#FAFBFC;
     border-bottom: 1px solid #dadada;
 }
 
-.container.page-tabs-menu ul {
+.container.tabs-menu ul {
     display:flex;
     margin-bottom: -1px;
+    justify-content: center;
 }
 
-.container.page-tabs-menu ul li {
+.container.tabs-menu ul li {
     border-top: 1px solid rgb(230 94 0 / 0%);
     border-left: 1px solid rgb(218 218 218 / 0%);
     border-right: 1px solid rgb(218 218 218 / 0%);
@@ -122,7 +114,7 @@ main {
     padding: 10px 15px;
 }
 
-.container.page-tabs-menu ul li.active {
+.container.tabs-menu ul li.active {
     border-top: 2px solid rgb(230 94 0 / 100%);
     border-left: 1px solid rgb(218 218 218 / 100%);
     border-right: 1px solid rgb(218 218 218 / 100%);
@@ -130,4 +122,14 @@ main {
     color: #000;
     font-weight: 600;
     background-color: #fff;
+}
+.container.contact-links {
+    color: blue;
+    display: flex;
+    margin-top: 10px;
+
+}
+
+.container.avatars {
+    padding: 40px;
 }
